--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-oauthlib==0.6.3
-python-decouple==2.3
-requests==2.4.1
-requests-oauthlib==0.4.1
+Pygments==1.6
+astroid==1.2.1
+gnureadline==6.3.3
+httpie==0.8.0
+ipython==2.2.0
+logilab-common==0.62.1
+pep8==1.5.7
+pylint==1.3.1
+python-dateutil==2.2
+requests==2.5.1
+six==1.8.0
+stevedore==0.15
+vboxapi==1.0
+virtualenv==1.11.6
+virtualenv-clone==0.2.5
+virtualenvwrapper==4.2
 wsgiref==0.1.2
